# RavenEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini
Source/: Base.hpp
Source/Utils/: NonCopyable.hpp
assets/models/: Box.gltf  DamagedHelmet.gltf  Sponza.gltf  cube.gltf  smooth_vase.glb  suzanne.glb
data/: config.json
data/scenes/: cube.json  damagedHelmet.json  gltf.json  sponza.json
docs/: Doxyfile
samples/: CMakeLists.txt  README.md
samples/cube/: CMakeLists.txt  Cube.cpp  Cube.hpp  main.cpp
samples/damagedHelmet/: CMakeLists.txt  DamagedHelmet.cpp  DamagedHelmet.hpp  main.cpp
samples/gltf/: CMakeLists.txt  Gltf.cpp  Gltf.hpp  main.cpp
samples/sponza/: CMakeLists.txt  Sponza.cpp  Sponza.hpp  main.cpp
shaders/: model.frag  model.vert  skybox.vert
source/: Base.cpp  Base.hpp  CMakeLists.txt
source/assets/: Asset.cpp  Asset.hpp  AssetesManager.cpp  AssetsManager.cpp  AssetsManager.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Texture.cpp  Texture.hpp
source/config/: Cli.cpp  Cli.hpp  CliOptions.cpp  CliOptions.hpp  Config.cpp  Config.hpp
source/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  ElementInspector.cpp  ElementInspector.hpp  SceneInspector.cpp  SceneInspector.hpp  main.cpp
source/engine/: Base.cpp  Base.hpp
source/entity/: Entity.cpp  Entity.hpp
source/extras/: eastl.cpp
source/files/: File.cpp  File.hpp  FilesManager.cpp  FilesManager.hpp
source/input/: Input.hpp  InputSystem.cpp  InputSystem.hpp
source/jobSystem/: JobSystem.cpp  JobSystem.hpp
source/logs/: Logger.cpp  Logger.hpp  Logs.hpp  LogsManager.cpp  LogsManager.hpp
source/math/: Basis.cpp  Basis.hpp  Common.hpp  Math.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Typedefs.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
source/render/: Buffer.cpp  (+17 more)
sources/: Base.cpp  Base.hpp
tests/: CMakeLists.txt
tools/: compileShaders.py
(+123 files in other folders)
